--- a/index.html
+++ b/index.html
@@ -196,6 +196,224 @@
       </p>
     </section>
 
+    <section class="image-text-section">
+      <img
+        src="./dist/images/tv_pc_tablet_celular.png"
+        alt="Imagem com TV, Computador, Tablet e celular"
+      />
+      <div class="image-text-section__text_container">
+        <h2 class="title">Assista do seu jeito</h2>
+        <p class="text--big">
+          Aproveite a tela grande da TV ou assista no tablet, laptop, celular e
+          outros aparelhos. Nossa seleção de títulos em 4K não para de crescer.
+          Além disso, para a felicidade de todos, é possível assistir em até 4
+          telas ao mesmo tempo.
+        </p>
+      </div>
+    </section>
+
+    <section class="image-text-section image-text-section--image-full-width">
+      <img src="./dist/images/fundo_rei_leao.png" alt="Rei Leão" />
+      <div
+        class="image-text-section__text_container image-text-section--image-full-width__text_container"
+      >
+        <h2 class="title">Baixe filmes e séries</h2>
+        <p class="text--big">
+          Baixe e assista quando e onde quiser. Assim, seus favoritos estão
+          sempre com você, até mesmo sem internet.
+        </p>
+      </div>
+    </section>
+
+    <section class="available-devices">
+      <h2 class="title">Disponível nos seus dispositivos favoritos</h2>
+      <ul class="available-devices__list">
+        <li class="available-devices__list__item">
+          <img
+            src="./dist/images/dispositivos/computador.png"
+            alt="Computador"
+          />
+          <h4 class="title--small">Computador</h4>
+          <ul class="text">
+            <li>Chrome OS</li>
+            <li>MacOS</li>
+            <li>PC Windows</li>
+          </ul>
+        </li>
+        <li class="available-devices__list__item">
+          <img src="./dist/images/dispositivos/tv.png" alt="Tv" />
+          <h4 class="title--small">TV</h4>
+          <ul class="text">
+            <li>Amazon Fire TV</li>
+            <li>Android TV</li>
+            <li>Apple TV</li>
+            <li>Chromecast</li>
+            <li>TVs LG</li>
+            <li>Roku</li>
+            <li>Samsung</li>
+          </ul>
+        </li>
+        <li class="available-devices__list__item">
+          <img
+            src="./dist/images/dispositivos/videogames.png"
+            alt="Videogame"
+          />
+          <h4 class="title--small">Videogames</h4>
+          <ul class="text">
+            <li>PS4</li>
+            <li>PS5</li>
+            <li>Xbox One</li>
+            <li>Xbox Series X</li>
+            <li>Xbox Series S</li>
+          </ul>
+        </li>
+        <li class="available-devices__list__item">
+          <img src="./dist/images/dispositivos/celular.png" alt="Celular" />
+          <h4 class="title--small">Celulares e tablets</h4>
+          <ul class="text">
+            <li>Tablets amazon Fire</li>
+            <li>Celulares e Tablets Android</li>
+            <li>iPhone e iPad</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+
+    <section class="faq">
+      <h2 class="title">Perguntas frequentes</h2>
+
+      <ul class="faq__questions">
+        <li class="faq__questions__item">
+          <div class="faq__questions__item__question" data-faq-question>
+            O que está incluído no Disney+?
+          </div>
+          <div class="faq__questions__item__answer text--big">
+            <p class="text--big">O Disney+ oferece:</p>
+            <ul class="faq__questions__item__answer__list">
+              <li class="faq__questions__item__answer__list__item">
+                <p class="text--big">
+                  Experiência de entretenimento exclusiva.
+                </p>
+              </li>
+              <li class="faq__questions__item__answer__list__item">
+                <p class="text--big">
+                  As melhores histórias da Disney, Pixar, Marvel, Star Wars e
+                  National Geographic, tudo em um só lugar.
+                </p>
+              </li>
+              <li class="faq__questions__item__answer__list__item">
+                <p class="text--big">
+                  Downloads ilimitados em até 10 dispositivos compatíveis.
+                </p>
+              </li>
+              <li class="faq__questions__item__answer__list__item">
+                <p class="text--big">Mais de 300 títulos em 4K UHD e HDR.</p>
+              </li>
+              <li class="faq__questions__item__answer__list__item">
+                <p class="text--big">
+                  A possibilidade de assistir em até 4 dispositivos compatíveis
+                  simultaneamente sem custo adicional.
+                </p>
+              </li>
+              <li class="faq__questions__item__answer__list__item">
+                <p class="text--big">
+                  IMAX Enhanced: disponível para alguns títulos da Marvel em
+                  dispositivos compatíveis com o Disney+.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="faq__questions__item">
+          <div class="faq__questions__item__question" data-faq-question>
+            Já tem o Disney+ ou o Star+ e quer o Combo+?
+          </div>
+          <div class="faq__questions__item__answer text--big">
+            <p class="text--big">Ao assinar o Combo+:</p>
+            <ul class="faq__questions__item__answer__list">
+              <li class="faq__questions__item__answer__list__item">
+                <p class="text--big">
+                  O valor da sua assinatura existente será descontado do preço
+                  do Combo+.
+                </p>
+              </li>
+              <li class="faq__questions__item__answer__list__item">
+                <p class="text--big">
+                  Se você assina o plano mensal, o valor que você paga
+                  mensalmente será descontado do preço do Combo+.
+                </p>
+              </li>
+              <li class="faq__questions__item__answer__list__item">
+                <p class="text--big">
+                  Se você tem uma assinatura anual do Disney+ cobrada
+                  diretamente pelo Disney+, não é possível mudar para o Combo+
+                  no momento. Entre em contato com o
+                  <a href="#" class="link-text">suporte do Disney+</a> para
+                  conhecer suas opções.
+                </p>
+              </li>
+              <li class="faq__questions__item__answer__list__item">
+                <p class="text--big">
+                  Você vai receber um e-mail com os valores detalhados assim que
+                  finalizar o pagamento.
+                </p>
+              </li>
+              <li class="faq__questions__item__answer__list__item">
+                <p class="text--big">
+                  Lembre-se: você pode cancelar a assinatura quando quiser.
+                </p>
+              </li>
+            </ul>
+
+            <p class="text--big">
+              No momento, apenas a assinatura mensal do Combo+ está disponível.
+            </p>
+          </div>
+        </li>
+
+        <li class="faq__questions__item">
+          <div class="faq__questions__item__question" data-faq-question>
+            Quais formas de pagamento posso utilizar?
+          </div>
+          <div class="faq__questions__item__answer text--big">
+            Você pode utilizar: cartão de débito, cartão de crédito, PayPal,
+            Mercado Pago, e também empresas parceiras como Google Play Store,
+            App Store da Apple; Mercado Livre e provedores locais de TV,
+            telefonia e internet.
+          </div>
+        </li>
+
+        <li class="faq__questions__item">
+          <div class="faq__questions__item__question" data-faq-question>
+            Como posso ver conteúdo com classificação indicativa até 16 e 18?
+          </div>
+          <div class="faq__questions__item__answer text--big">
+            Para poder acessar o catálogo completo que inclui conteúdo com
+            classificação indicativa até 16 e 18, todos os usuários do Disney+
+            na América Latina devem atualizar as configurações de controle
+            parental do perfil. É possível restringir o conteúdo de cada perfil
+            e também adicionar um PIN de bloqueio. Os usuários que preferirem
+            manter a configuração atual vão continuar aproveitando o Disney+ com
+            a classificação indicativa até 14, podendo alterá-la a qualquer
+            momento em "Editar Perfis".
+          </div>
+        </li>
+        <li class="faq__questions__item">
+          <div class="faq__questions__item__question" data-faq-question>
+            Onde posso assistir ao Disney+?
+          </div>
+          <div class="faq__questions__item__answer text--big">
+            O aplicativo do Disney+ está disponível em dispositivos móveis,
+            navegadores, videogames, decodificadores e smart TVs. Confira
+            <a href="#" class="link-text"
+              >a lista completa de dispositivos compatíveis na Central de
+              Ajuda</a
+            >
+          </div>
+        </li>
+      </ul>
+    </section>
+
     <script src="./src/main.js"></script>
   </body>
 </html>
